--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
         <!--Navigation Bar-->
         <nav>
             <img class="navLogo" src="Images/Pixel Pioneers logo (transparent).png" style="width: 100%;">
-            <a class="currentPage" href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#pricing">Pricing</a>
+            <img class=navName src="Images/Pixel Pioneers with Slogan.png" style="width: 100%;">
+            <a href="https://twitter.com/PixlPioneers" target="_blank"><img class="socials" src="Images/Twitter (X).png" style="width: 100%;"></a>
+
             <a>Contact</a>
+            <a href="#pricing">Pricing</a>
+            <a href="#about">About</a>
+            <a class="currentPage" href="#home">Home</a>
         </nav>
 
         <!--Background image section-->
         <section class="back-img">
-            <img src="Images/Pixel Pioneers with Slogan.png" style="width: 100%;">
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </section>
 
         <hr>
