--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </nav>
 
         <!--Background image section-->
-        <section class="back-img">
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <section style="background-color: black;">
+            <div class="back-img">
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            </div>
         </section>
-
-        <hr>
 
         <main>
             <br><br><br><br>
