--- a/index.html
+++ b/index.html
@@ -142,30 +142,23 @@
         <footer>
             <!--RVnardtab column-->
             <div class="row">
-                <div class="column5">
+
+                <div class="column3">
                     <img class="footerLogo" src="Images/Pixel Pioneers logo (transparent).png" style="width: 100%;">
                     <img class="footerLogo" src="Images/Pixel Pioneers.png" style="width: 100%;">
-                    <p style="color: #fff900">"Forging Digital Frontiers. One Pixel at a Time"</p>
+                    <p style="color: #c0bb0e">"Forging Digital Frontiers. One Pixel at a Time"</p>
                 </div>
 
                 <!--Page Links column-->
-                <div class="column5">
+                <div class="column3">
                     <h2>Page Links</h2>
                     <a class="currentPage" href="#home">Home</a>
                     <a href="#about">About</a>
                     <a href="#pricing">Pricing</a>
                 </div>
 
-                <!-- column-->
-                <div class="column5">
-                </div>
-
-                <!-- column-->
-                <div class="column5">
-                </div>
-
                 <!--Contacts column-->
-                <div class="column5">
+                <div class="column3">
                     <h2>Contact Us</h2>
                     <a href="https://twitter.com/PixlPioneers" target="_blank">Twitter (X)</a>
                     <a href="mailto:pixpion@gmail.com" target="_blank">Email</a>
