--- a/index.html
+++ b/index.html
@@ -17,13 +17,23 @@
         <nav>
             <img class="navLogo" src="Images/Pixel Pioneers logo (transparent).png" style="width: 100%;">
             <img class=navName src="Images/Pixel Pioneers with Slogan.png" style="width: 100%;">
-            <a href="https://twitter.com/PixlPioneers" target="_blank"><img class="socials" src="Images/Twitter (X).png" style="width: 100%;"></a>
 
-            <a>Contact</a>
+            <a href="#contact">Contact</a>
             <a href="#pricing">Pricing</a>
             <a href="#about">About</a>
             <a class="currentPage" href="#home">Home</a>
         </nav>
+
+        <!--Navigation Bar Mobile-->
+        <div class="navmobile">
+            <img class="navmobileLogo" src="Images/Pixel Pioneers logo (transparent).png" style="width: 100%;">
+            <img class=navmobileName src="Images/Pixel Pioneers with Slogan.png" style="width: 100%;">
+
+            <a class="currentPage" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#pricing">Pricing</a>
+            <a>Contact</a>
+        </div>
 
         <!--Background image section-->
         <section style="background-color: black;">
@@ -138,6 +148,33 @@
             <br><br>
         </section>
 
+        <section class="back-img2" style="opacity: 100%;">
+            <div class="row backgroundOpacity">
+                <br><br>
+                <div class="column3"></div>
+
+                <div class="column3">
+                    <h1>Contact Us!</h1>
+                    <br>
+                    <form style="text-align: center;">
+                        <label for="name"><h3>First name:</h3></label>
+                        <input type="text" id="name" name="name" size="50" style="padding: 12px;"><br><br>
+
+                        <label for="message"><h3>Message:</h3></label>
+                        <input type="text" id="message" name="message" size="50" style="padding: 12px;"><br><br>
+
+                        <label for="lemail"><h3>Email:</h3></label>
+                        <input type="email" id="email" name="email" size="50" style="padding: 12px;"><br><br>
+                        
+                        <input type="submit" value="Submit">
+                      </form>
+                </div>
+
+                <div class="column3"></div>
+                <br><br>
+            </div>
+        </section>
+
         <!--Footer bar-->
         <footer>
             <!--RVnardtab column-->
@@ -159,7 +196,7 @@
 
                 <!--Contacts column-->
                 <div class="column3">
-                    <h2>Contact Us</h2>
+                    <h2>Contacts</h2>
                     <a href="https://twitter.com/PixlPioneers" target="_blank">Twitter (X)</a>
                     <a href="mailto:pixpion@gmail.com" target="_blank">Email</a>
                 </div>
