--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
                     <br>
                     <form style="text-align: center;">
                         <label for="name"><h3>First name:</h3></label>
-                        <input type="text" id="name" name="name" size="50" style="padding: 12px;"><br><br>
+                        <input type="text" id="name" name="name" size="35" style="padding: 12px;"><br><br>
 
                         <label for="message"><h3>Message:</h3></label>
-                        <input type="text" id="message" name="message" size="50" style="padding: 12px;"><br><br>
+                        <input type="text" id="message" name="message" size="35" style="padding: 12px;"><br><br>
 
                         <label for="lemail"><h3>Email:</h3></label>
-                        <input type="email" id="email" name="email" size="50" style="padding: 12px;"><br><br>
+                        <input type="email" id="email" name="email" size="35" style="padding: 12px;"><br><br>
                         
-                        <input type="submit" value="Submit">
+                        <input type="submit" value="submit">
                         <br><br>
                       </form>
                 </div>
@@ -190,11 +190,10 @@
                     <a href="#pricing">Pricing</a>
                 </div>
 
-                <!--Contacts column-->
+                <!--Socials column-->
                 <div class="column3">
-                    <h2>Contacts</h2>
+                    <h2>Socials</h2>
                     <a href="https://twitter.com/PixlPioneers" target="_blank">Twitter (X)</a>
-                    <a href="mailto:pixpion@gmail.com" target="_blank">Email</a>
                 </div>
             </div>
         </footer>
