--- a/index.html
+++ b/index.html
@@ -154,19 +154,19 @@
                 <div class="column1">
                     <h1>Contact Us!</h1>
                     <br>
-                    <form style="text-align: center;">
-                        <label for="name"><h3>First name:</h3></label>
+                    <form action="https://formsubmit.co/rvnamtab@gmail.com" method="POST" style="text-align: center;">
+                        <label for="name"><h3>Name:</h3></label>
                         <input type="text" id="name" name="name" size="35" style="padding: 12px;"><br><br>
 
                         <label for="message"><h3>Message:</h3></label>
-                        <input type="text" id="message" name="message" size="35" style="padding: 12px;"><br><br>
+                        <input type="text" id="message" name="message" size="35" style="padding: 12px;" required><br><br>
 
                         <label for="lemail"><h3>Email:</h3></label>
-                        <input type="email" id="email" name="email" size="35" style="padding: 12px;"><br><br>
+                        <input type="email" id="email" name="email" size="35" style="padding: 12px;" required><br><br>
                         
                         <input type="submit" value="submit">
                         <br><br>
-                      </form>
+                    </form>
                 </div>
             </div>
         </section>
