--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <label for="message"><h3>Message:</h3></label>
                         <input type="text" id="message" name="message" size="35" style="padding: 12px;" required><br><br>
 
-                        <label for="lemail"><h3>Email:</h3></label>
+                        <label for="email"><h3>Email:</h3></label>
                         <input type="email" id="email" name="email" size="35" style="padding: 12px;" required><br><br>
                         
                         <input type="submit" value="submit">
