--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
             <a class="currentPage" href="#home">Home</a>
             <a href="#about">About</a>
-            <a href="#pricing">Pricing</a>
-            <a>Contact</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
         </div>
 
         <!--Background image section-->
