--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <main class="back-img" style="opacity: 100%;">
             <div class="row backgroundOpacity">
                 
-                <div class="backgroundOpacity2">
-                    <hr style="border: solid 1px #a59431">
+                <div class="backgroundOpacity3">
                     <!--Navigation Bar-->
                     <nav>
+                        <br><br>
                         <img class="navLogo" src="Images/Pixel Pioneers logo (transparent).png" style="width: 100%;">
                         <img class=navName src="Images/Pixel Pioneers with Slogan.png" style="width: 100%;">
 
@@ -192,8 +192,7 @@
 
                 <div class="column3">
                     <img class="footerLogo" src="Images/Pixel Pioneers logo (transparent).png" style="width: 100%;">
-                    <img class="footerLogo" src="Images/Pixel Pioneers.png" style="width: 100%;">
-                    <p style="color: #c0bb0e">"Forging Digital Frontiers. One Pixel at a Time"</p>
+                    <img class="footerText" src="Images/Pixel Pioneers with Slogan.png" style="width: 100%;">
                 </div>
 
                 <!--Page Links column-->
