--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                         <p>
                             We will design and develop a captivating portfolio website tailored to your unique professional journey, <br><br>
                             focusing on delivering a sleek and polished design that accentuates your most significant career milestones. <br><br>
-                            Your website will serve as an impressive showcase for you to proudly display your accomplishments to your clients.
+                            Your website will serve as an impressive showcase, <br><br> 
+                            for you to proudly display your accomplishments to your clients.
                         </p>
                         <br>
                     </div>
@@ -153,7 +154,13 @@
                     <div class="cards">
                         <img src="Images/Freelancing.png" style="width: 100%;">
                         <h3>Freelancers and Brands</h3>
-
+                        <p>
+                            We will craft a tailor-made website that perfectly showcase your unique specialization and services, <br><br>
+                            ensuring that you stand head and shoulders above the competition. <br><br>
+                            With our expertise, your clients will be not only convinced, <br><br>
+                            but genuinely impressed that you/your brand <br><br>
+                            is the real deal.
+                        </p>
                         <br>
                     </div>
                 </div>
@@ -168,7 +175,7 @@
                 <div class="column1">
                     <h1 id="contact">Contact Us!</h1>
                     <br>
-                    <form action="https://formsubmit.co/rvnamtab@gmail.com" method="POST" style="text-align: center;">
+                    <form action="https://formsubmit.co/pixpion@gmail.com" method="POST" style="text-align: center;">
                         <label for="name"><h3>Name:</h3></label>
                         <input type="text" id="name" name="name" size="35" style="padding: 12px;"><br><br>
 
